2005-08-05  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/syscall.c (rt_intr_handler, rt_alarm_handler): Export
	so that kernel-based ISR or alarm handlers can synchronize with
	user-space waiters through rt_intr/alarm_wait().
	(__rt_bind_helper): Rewrite so that we use the proper placeholder
	type.

	* skins/rtai/intr.c (__intr_read_proc): Add /proc export
	information.

	* skins/rtai/lib/intr.c (rt_intr_bind): Fix binding key.

2005-08-04  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtdm/module.c (rtdm_skin_init): Fix compilation in
	!CONFIG_RTAI_OPT_FUSION case.

	* include/nucleus/pod.h: Discard the useless tick handler callback
	from the service table.

	* nucleus/pod.c (xnpod_wait_thread_period): Reset the overrun
	count upon XNBREAK condition.

2005-08-03  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* skins/posix/internal.h (clock_adjust_timeout): Correct behaviour
	in clock wrap case.

2005-08-02  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386, include/nucleus: Finalize dual I-pipe/Adeos support
	for x86.

	* skins/rtdm: Merge RTDM patch level #6.

2005-08-01  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* skins/posix/posix.h, 
	  skins/posix/timer.h: 
	  sim/skins/posix/posix_override.h,
	  sim/skins/posix/GNUmakefile.am: Have timers compile with
	simulator.

	* skins/posix/thread.h (thread_set_errno, thread_get_errno):
	Handle the interrupt case, to allow sem_post to be used from
	interrupts.

	* skins/posix (cond_timedwait, mutex_timedlock, sem_timedwait, 
		mq_timed*): use clock_adjust_timeout.

	* skins/posix/internal.h (clock_get_ticks, clock_adjust_timeout):
	Factor the timeouts handling, treating correctly the case where
	timeout has already passed.

	* skins/posix/clock.c: Add support for CLOCK_REALTIME.

2005-07-31  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* skins/rtdm/drvlib.c (rtdm_task_busy_sleep), 
	skins/rtai/timer.c (rt_timer_spin): Call cpu_relax when busy
	waiting.
