@@ -88,13 +88,15 @@ typedef struct xnarch_fltinfo {
 #define xnarch_fault_trap(fi)  ((fi)->trap)
 #define xnarch_fault_code(fi)  ((fi)->ia64.isr)
 #define xnarch_fault_pc(fi)    ((fi)->ia64.regs->cr_iip)
-/* fault is caused by use FPU while FPU disabled. */
+/* Fault is caused by use of FPU while FPU disabled. */
 #define xnarch_fault_fpu_p(fi) ((fi)->trap == ADEOS_FPDIS_TRAP)
-/* The following predicate is guaranteed to be called over a regular
-   Linux stack context. */
+/* The following predicates are only usable over a regular Linux stack
+   context. */
 #define xnarch_fault_pf_p(fi)   ((fi)->trap == ADEOS_PF_TRAP)
-#define xnarch_fault_notify(fi) (!(current->ptrace & PT_PTRACED) || \
-                                 (fi)->trap != ADEOS_DEBUG_TRAP)
+#define xnarch_fault_bp_p(fi)   ((current->ptrace & PT_PTRACED) && \
+                                 (fi)->trap == ADEOS_DEBUG_TRAP)
+#define xnarch_fault_notify(fi) (!xnarch_fault_bp_p(fi))
+
 #ifdef __cplusplus
 extern "C" {
 #endif
