@@ -38,25 +38,26 @@
 #define XNBREAK   0x00000800	/* Forcibly awaken from a wait state */
 #define XNKICKED  0x00001000	/* Kicked upon signal (shadow only) */
 #define XNBOOST   0x00002000	/* Undergoes regular PIP boost */
+#define XNDEBUG   0x00004000	/* Hit debugger breakpoint (shadow only) */
 
 /* Mode flags. */
-#define XNLOCK    0x00004000	/* Not preemptible */
-#define XNRRB     0x00008000	/* Undergoes a round-robin scheduling */
-#define XNASDI    0x00010000	/* ASR are disabled */
-#define XNSHIELD  0x00020000	/* IRQ shield is enabled (shadow only) */
-#define XNTRAPSW  0x00040000	/* Trap execution mode switches */
+#define XNLOCK    0x00008000	/* Not preemptible */
+#define XNRRB     0x00010000	/* Undergoes a round-robin scheduling */
+#define XNASDI    0x00020000	/* ASR are disabled */
+#define XNSHIELD  0x00040000	/* IRQ shield is enabled (shadow only) */
+#define XNTRAPSW  0x00080000	/* Trap execution mode switches */
 
-#define XNFPU     0x00080000	/* Thread uses FPU */
-#define XNSHADOW  0x00100000	/* Shadow thread */
-#define XNROOT    0x00200000	/* Root thread (i.e. Linux/IDLE) */
+#define XNFPU     0x00100000	/* Thread uses FPU */
+#define XNSHADOW  0x00200000	/* Shadow thread */
+#define XNROOT    0x00400000	/* Root thread (i.e. Linux/IDLE) */
 
 /* Must follow the declaration order of the above bits. */
 #define XNTHREAD_SLABEL_INIT { \
   "ssp", "pnd", "dly", "rdy", "dor", \
   "zom", "rst", "sta", "rlx", "tmo", \
-  "rmi", "brk", "sig", "pip", "lck", \
-  "rrb", "asd", "shl", "tsw", "fpu", \
-  "usr", "idl" \
+  "rmi", "brk", "sig", "pip", "stp", \
+  "lck", "rrb", "asd", "shl", "tsw", \
+  "fpu", "usr", "idl" \
 }
 
 #define XNTHREAD_BLOCK_BITS   (XNSUSP|XNPEND|XNDELAY|XNDORMANT|XNRELAX)
