@@ -143,6 +143,10 @@ static inline void xntimer_stop(xntimer_t *timer)
 	xntimer_stop_timer_inner(timer);
 }
 
+void xntimer_lock_timers(void);
+
+void xntimer_unlock_timers(void);
+
 void xntimer_freeze(void);
 
 xnticks_t xntimer_get_date(xntimer_t *timer);
